--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,6 @@
 {
   "port": 2000,
   "interface": "127.0.0.1",
-  "github_user": "",
-  "github_pat": ""
+  "github_user": "${GITHUB_USER}",
+  "github_pat": "${GITHUB_PAT}"
 }
