Restructured deployment files

--- a/deployment/docker/strollgistid/Dockerfile
+++ b/deployment/docker/strollgistid/Dockerfile
@@ -11,9 +11,12 @@ RUN --mount=target=/mnt/build-context \
     touch /var/log/strollgistid.log && \
     apk --update upgrade && \
     apk add --update --no-cache gettext && \
-    cp -r /mnt/build-context/* $WORKDIR && \
+    cd /mnt/build-context/ && \
+    cp -r `ls -A . | grep -vE "deployment"` $WORKDIR && \
+    cp -r /mnt/build-context/deployment/docker/strollgistid/entrypoint.sh $WORKDIR && \
     if [ -r /mnt/build-context/config.json ] ; then cp /mnt/build-context/config.json $WORKDIR ; else cp /mnt/build-context/config.json.example $WORKDIR/config.json ; fi && \
     sed -i -E 's/127.0.0.1/0.0.0.0/g' $WORKDIR/config.json* && \
+    sed -i -E 's/svout: \{.*?\}/svout: { type: "console", layout: { type: "basic" } }/g' $WORKDIR/index.js && \
     chown -R node $WORKDIR /var/log/strollgistid.log && \
     cd $WORKDIR && \
     npm install
