--- a/deployment/k8s/nginx/nginx-ConfigMap.yml
+++ b/deployment/k8s/nginx/nginx-ConfigMap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: strollgistid-nginx-conf
+  name: strollgistid-nginx-default-conf-template
 data:
   default.conf.template: |
     server {
