--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - strollgistid
     volumes:
-      - ./nginx/site.conf:/etc/nginx/templates/default.conf.template:ro
+      - ./deployment/docker/nginx/site.conf:/etc/nginx/templates/default.conf.template:ro
     restart: always
     env_file:
       - docker-env
@@ -21,5 +21,7 @@ services:
 #      retries: 300
 
   strollgistid:
-    build: .
+    build:
+      dockerfile: ./deployment/docker/strollgistid/Dockerfile
+      context: .
     restart: always
