--- a/deployment/docker/nginx/site.conf
+++ b/deployment/docker/nginx/site.conf
@@ -1,5 +1,6 @@
 server {
     server_name ${NGINX_HOST};
+    listen ${NGINX_PORT};
     index index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
