--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ on:
     - cron:  '30 23 1 * *'
 
 jobs:
-  build_strollgistid:
+  docker:
     name: Push StrollGistID image to GitHub Packages
     runs-on: ubuntu-latest
     steps:
